# agentsystems-notary

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
agentsystems_notary/: __init__.py  core.py  crewai_adapter.py  langchain_adapter.py
agentsystems_witness/: __init__.py  callback_handler.py  core.py  crewai_adapter.py  langchain_adapter.py
tests/: test_basic.py
