[project]
name = "agentsystems-witness"
version = "0.1.0"
description = "Audit logging SDK for LLM interactions in regulated industries"
readme = "README.md"
authors = [ { name = "AgentSystems", email = "support@agentsystems.ai" } ]
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "httpx>=0.25.0",
    "jcs>=0.2.1",
    "langchain-core>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5"
]

license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentsystems_witness*"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentsystems_witness --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
